[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "turboquant-mlx"
version = "0.2.0"
description = "TurboQuant KV cache compression for MLX with fused Metal kernels"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
mlx-lm = [
    "mlx-lm>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["turboquant_mlx*"]
